fixed broken fontawesome icon and add spacing to save button (#175)

--- a/src/apps/properties/src/views/PropertyOverview/components/PropertyName/PropertyName.less
+++ b/src/apps/properties/src/views/PropertyOverview/components/PropertyName/PropertyName.less
@@ -5,11 +5,11 @@
   // margin-bottom: 0.5rem;
 
   .Name {
-    cursor: pointer;
+    cursor: text;
     // font-size: 1.6em;
     .Edit {
       display: none;
-      padding: 0.5rem;
+      padding-left: 8px;
     }
     &:hover {
       .Edit {
@@ -29,6 +29,7 @@
     button {
       font-size: 0.6em;
       padding: 0.3rem 0.6rem;
+      margin-right: 8px;
     }
 
     // i {
